# CustomerExperienceAnalytics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
config/: settings.py
data/: README.md
data/processed/: cleaned_reviews.csv.dvc  reviews with sentiments and themes.csv.dvc
data/processed/bank_themes/: boa_theme_map.json.dvc  cbe_theme_map.json.dvc  dashen_theme_map.json.dvc
data/raw/scraped_reviews/: all_bank_reviews_20250726_131601.csv.dvc
notebooks/: Data_Preprocessing.ipynb  Insight and Reccomendataion.ipynb  README.md  Sentiment_and_Thematic_Analysis.ipynb
scripts/: README.md  load_data.py  oracle_setup.py  scrape_playstore.py  sql_dump.sql
src/core/: oracle_core.py
src/models/: keyword_and_topicmodeling.py  sentiments.py
src/utils/: keyword_text_processor.py  plot_utils.py  utils.py
tests/unit/: test_keyword_and_topicmodeling.py  test_keyword_text_processor.py  test_utils.py
